<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorSkyBlue"
    android:orientation="vertical"
    tools:context=".LoginActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/shape_add_bt"
        android:orientation="vertical"
        android:padding="10dp"
        android:layout_marginTop="80dp">

        <android.support.design.widget.TextInputLayout
            android:id="@+id/input_layout_mobile"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColorHint="@color/colorSkyBlue"
            android:background="@drawable/shape_add_et">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/et_mobile"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableStart="@drawable/ic_mobile"
                android:drawablePadding="20sp"
                android:hint="@string/mobileNo"
                android:inputType="number"
                android:paddingStart="10dp"
                android:textColor="@color/colorSkyBlue"
                android:textColorHint="@color/colorRed"
                android:textSize="16sp"
                tools:ignore="RtlHardcoded,RtlSymmetry"/>

        </android.support.design.widget.TextInputLayout>

        <TextView
            android:id="@+id/tv_mobileNo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="5dp"
            android:text="@string/mobileNoMessage"
            android:textColor="@color/colorAccent"
            android:textSize="12sp"
            android:textStyle="bold" />

        <android.support.design.widget.TextInputLayout
            android:id="@+id/input_layout_OTP"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/shape_add_et"
            android:textColorHint="@color/colorSkyBlue"
            android:layout_marginTop="20dp">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/et_OTP"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableStart="@drawable/ic_mobile"
                android:drawablePadding="20sp"
                android:hint="@string/OTP"
                android:inputType="number"
                android:paddingStart="10dp"
                android:textColorHint="@color/colorSkyBlue"
                android:textSize="16sp"
                android:textColor="@color/colorSkyBlue"
                tools:ignore="RtlHardcoded,RtlSymmetry" />

        </android.support.design.widget.TextInputLayout>

        <LinearLayout
            android:id="@+id/ll_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:orientation="horizontal"
            android:weightSum="2">

            <Button
                android:id="@+id/btn_reset"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="3dp"
                android:layout_weight="1"
                android:background="@color/colorSkyBlue"
                android:text="@string/reset"
                android:textSize="18sp"
                android:textStyle="bold"
                tools:ignore="ButtonStyle" />

            <Button
                android:id="@+id/btn_submit"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="3dp"
                android:layout_weight="1"
                android:background="@color/colorSkyBlue"
                android:text="@string/submit"
                android:textSize="18sp"
                android:textStyle="bold"
                tools:ignore="ButtonStyle" />
        </LinearLayout>
    </LinearLayout>

</ScrollView>