<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorSkyBlue"
    android:padding="10dp"
    tools:context=".Settings">

    <RelativeLayout
        android:id="@+id/rel_header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorBlue">

        <TextView
            android:id="@+id/tv_settings"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginStart="100dp"
            android:padding="10dp"
            android:text="@string/settings"
            android:textColor="@color/colorWhite"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tv_addBT"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:layout_marginEnd="5dp"
            android:background="@drawable/shape_add_bt"
            android:paddingStart="15dp"
            android:paddingTop="10dp"
            android:paddingEnd="15dp"
            android:paddingBottom="10dp"
            android:text="@string/addBT"
            android:textColor="@color/colorBlack"
            android:textStyle="bold"
            tools:ignore="ContentDescription,RelativeOverlap,RtlSymmetry" />
    </RelativeLayout>

    <TextView
        android:id="@+id/tv_quickBall"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/rel_header"
        android:layout_marginTop="30dp"
        android:background="@drawable/shape_setting_page"
        android:padding="5dp"
        android:paddingStart="15dp"
        android:paddingEnd="15dp"
        android:text="@string/launchQB"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="20sp"
        android:textStyle="bold" />

    <Switch
        android:id="@+id/switcher_quickBall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/rel_header"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="20dp"
        android:padding="5dp" />

    <TextView
        android:id="@+id/tv_autoBluetoothConnect"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/switcher_quickBall"
        android:layout_marginTop="20dp"
        android:background="@drawable/shape_setting_page"
        android:padding="5dp"
        android:paddingStart="15dp"
        android:paddingEnd="15dp"
        android:text="@string/autoBTConnect"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="20sp"
        android:textStyle="bold" />

    <Switch
        android:id="@+id/switcher_autoBluetoothConnect"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/switcher_quickBall"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:padding="5dp" />

<android.support.v7.widget.CardView
    android:layout_width="match_parent"
    android:layout_marginTop="10dp"
    android:elevation="30dp"
    android:layout_centerHorizontal="true"
    app:cardCornerRadius="12dp"
    android:layout_below="@+id/switcher_autoBluetoothConnect"
    android:layout_height="400dp">
    <TextView
        android:id="@+id/tv_pairedDevices"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/switcher_autoBluetoothConnect"
        android:gravity="center"
        android:padding="2dp"
        android:text="Saved Devices"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="20sp"
        android:textStyle="bold" />

    <ListView
        android:layout_centerHorizontal="true"
        android:id="@+id/listBluetooth"
        android:layout_marginTop="30dp"
        android:layout_gravity="center_horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:divider="@color/colorPrimary"
        android:dividerHeight="1dp"
        android:listSelector="@color/colorPrimaryDark">
    </ListView>
</android.support.v7.widget.CardView>
</RelativeLayout>